@@ -7,7 +7,8 @@ CHANGELOG for Homebox for Drupal
 7.x-2.x-beta3 2011/02/17
   - by brianV: Remove unneeded hook_update_n() implementations for D5-D6 update.
   - by brianV: Fix autosave.
-  - by drumm: Fix equalizeColumnHeight() JS function, which fixes the block landing zones.
+  - #1063928 by drumm: Fix equalizeColumnHeight() JS function, which fixes the block landing zones.
+  - by brianV: revert #1063928 to remove 100% width columns from the maximum-height check.
 
 7.x-2.0-beta2 2011/02/15
   - by brianV: update arguments to og_is_group_type() in homebox_og.module.
